# YouTube_Scraper

./: .gitignore  CHANGELOG.md  Doctor explains Brain Natriuretic Peptide (BNP or NT-proBNP) blood test to detect Heart Failure.json  How to Fast Before a Triglycerides Blood Test.json  README.md  data.json  no externalVideoID.json  pyproject.toml  sample_object.json  troubleshooting.json
src/youtube_scraper/core/: convert_to_json.py  monitor.py  search_terms.json  test.py
src/youtube_scraper/entrypoint/: entry.py
src/youtube_scraper/utilities/: driver.py  logger.py  video_processing.py  youtube.py
youtube_scraper/: cant_download.txt  scrape.py
youtube_scraper/core/: ad_processing.py  selenium_utils.py  youtube_utils.py
youtube_scraper/entrypoint/: csv_to_json.py  scrape_ads.py
youtube_scraper/refactored/: .env.example
youtube_scraper/refactored/core/: monitor.py  search_terms.json
youtube_scraper/refactored/entrypoint/: entry.py
youtube_scraper/refactored/utilities/: driver.py  logger.py  selenium.py
